--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: La-piedra-angular_68452
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 68452-h/images/cover.jpg
 creator:
   author:
     agent_name: Pardo Bazán, Emilia, condesa de
@@ -15,6 +18,8 @@ creator:
     - https://es.wikipedia.org/wiki/Emilia_Pardo_Baz%C3%A1n
     - https://en.wikipedia.org/wiki/Emilia_Pardo_Baz%C3%A1n
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/68452#La-piedra-angular
 gutenberg_issued: '2022-07-03'
 identifiers:
   gutenberg: '68452'
